# pybetter

./: .dockerignore  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  pytest.ini  setup.cfg  test.py
.github/: dependabot.yml
.github/workflows/: tests.yml
pybetter/: __main__.py  cli.py  improvements.py  test.py  utils.py
pybetter/transformers/: all_attribute.py  base.py  boolean_equality.py  empty_fstring.py  equals_none.py  mutable_args.py  nested_withs.py  not_in.py  not_is.py  parenthesized_return.py  unhashable_list.py
tests/: conftest.py  test_all_attribute.py  test_boolean_equality.py  test_empty_fstring.py  test_equals_none.py  test_mutable_args.py  test_nested_withs.py  test_no_crashes.py  test_not_in.py  test_not_is.py  test_parenthesized_return.py  test_trivial_fstring.py  test_unhashable_list.py
