[tool.poetry]
name = "pybetter"
version = "0.3.6"
description = "Tool for fixing trivial problems with your code."
authors = ["Kirill Borisov <lensvol@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lensvol/pybetter"
keywords = ["ast"]
include = [
    "LICENSE",
]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Quality Assurance",
]


[tool.poetry.dependencies]
python = "^3.6"
libcst = "^0.3.1"
click = "^7.0"
pyemojify = "^0.2.0"
pygments = "^2.5.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.3"
mypy = "^0.761"
pytest = "^5.3.4"
pytest-cov = "^2.8.1"
wemake-python-styleguide = "^0.13.4"

[tool.poetry.scripts]
pybetter = 'pybetter.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
