[tool.poetry]
name = "pybetter"
version = "0.4.1"
description = "Tool for fixing trivial problems with your code."
authors = ["Kirill Borisov <lensvol@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lensvol/pybetter"
keywords = ["ast"]
include = [
    "LICENSE",
]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Quality Assurance",
]


[tool.poetry.dependencies]
python = ">3.6"
libcst = "^0.4.1"
click = ">8.0"
pyemojify = "^0.2.0"
pygments = "^2.5.2"
hypothesmith = "^0.1.8"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
mypy = "^0.812"
flake8 = "^3.8.3"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"

[tool.poetry.scripts]
pybetter = 'pybetter.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
